--- a/package.json
+++ b/package.json
@@ -9,21 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/modifiers": "^6.0.1",
-    "@dnd-kit/sortable": "^7.0.2",
     "daisyui": "^2.51.5",
     "gsap": "^3.11.5",
     "next": "13.2.4",
-    "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-virtualized-auto-sizer": "^1.0.12",
-    "react-window": "^1.8.8"
+    "react-virtualized": "^9.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
