--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "daisyui": "^2.51.5",
     "gsap": "^3.11.5",
     "next": "13.2.4",
