--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-reveal": "^1.2.2",
     "react-toastify": "^9.1.2",
     "react-virtualized": "^9.22.4"
   },
