--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "daisyui": "^2.51.5",
+    "framer-motion": "^10.16.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-color": "^2.19.3",
@@ -18,7 +19,6 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-reveal": "^1.2.2",
     "react-toastify": "^9.1.2",
     "react-virtualized": "^9.22.4"
   },
